# healthsphere

./: .env.docker.example  .gitignore  AGENTS.md  Building AI Virtual Health Centers.md  README.md  concept.md  docker-compose.prod.yml  docker-compose.yml  healthsphere-project-breakdwon.md  investor-pitch.md  project-requirements.md  virtual-health-centre-stacks.md
backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260422_0001_initial_scaffold.py  20260423_0002_add_consultation_sessions.py  20260425_0003_add_record_chunks.py  20260428_0004_add_ai_usage_events.py
backend/app/: main.py
backend/app/agents/: __init__.py  consultation_scribe.py  follow_up.py  intake.py  lab_result_translator.py  persistence.py  record_digitization.py  runtime.py  scheduling.py  schemas.py  tools.py  triage.py
backend/app/api/: clinic_scope.py  deps.py  guardrails.py
backend/app/core/: ai_usage.py  config.py  database.py  errors.py  logging.py  monitoring.py
backend/app/domain/: __init__.py  record_types.py  review_policy.py  triage_guardrails.py
backend/app/jobs/: __init__.py  follow_up_reminders.py
backend/app/models/: __init__.py  ai_usage_event.py  appointment.py  clinic.py  (+6 more)
backend/docs/: frontend-api-contract.md
backend/tasks/: mvp-backend-iterations.md
backend/tests/: conftest.py  test_agents_runtime.py  test_auth_boundary.py  test_consultations_api.py  test_errors.py  test_health.py  test_patients_api.py  test_records_api.py  test_triage_api.py
(+80 files in other folders)
