[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "healthsphere-backend"
version = "0.1.0"
description = "HealthSphere FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "psycopg2-binary>=2.9,<3",
    "alembic>=1.13,<2",
    "pydantic-settings>=2.2,<3",
    "email-validator>=2.1,<3",
    "pgvector>=0.3,<1",
    "httpx>=0.27,<1",
    "openai-agents>=0.2.0",
    "python-multipart>=0.0.9,<1",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.3,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.uv]
package = false
